update modules and connection

--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     </div>
   </main> 
   <!-- Script JS -->
-  <script type="text/javascript" src="./src/index.js"></script>
+  <script type="module" src="./src/index.js"></script>
 </body>
 </html>
