Create handler for get and render data from table into UI

--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
 </head>
 <body>
   <main class="bg-slate-100 min-h-screen w-full pt-10 px-8">
-    <h1 class="text-xl text-gray-700 text-center mb-3 font-medium">Project Monitoring</h1> 
+    <h1 class="text-xl text-gray-700 text-center mb-3">Project Monitoring</h1> 
 
     <!-- Table Wrapper -->
-    <div class="flex flex-col overflow-scroll w-10/12 mx-auto">
+    <div class="flex flex-col overflow-scroll w-11/12 mx-auto">
       <div class="overflow-x-auto sm:-mx-6 lg:-mx-8">
         <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
           <div class="overflow-x-auto">
             <!-- Main Table -->
             <table class="min-w-full" id="table">
+              <!-- Heading -->
               <thead class="border-b">
                 <tr id="table-thead" class="bg-slate-200"></tr>
               </thead>
+              <!-- Body  -->
               <tbody id="table-tbody"></tbody>
             </table>
           </div>
